# picasso_test_api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .env  Dockerfile  config.py
backend/backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py  yasg.py
backend/file_server_app/: apps.py  docs.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py
backend/file_server_app/migrations/: 0001_initial.py
devops/: default.conf
